# PyTorchSimple

./: CMakeLists.txt  CMakePresets.json  loadmodules.scr
PyTorchSimple/: CMakeLists.txt  PyTorchSimple.cpp  PyTorchSimple.h
